--- a/oraculo-es1/index.html
+++ b/oraculo-es1/index.html
@@ -637,8 +637,8 @@ const finalStages = [
   title: "Aún hay más por descubrir...",
   gif: "https://static.wixstatic.com/media/7f5efc_e4cececd9a3d4752ac73ed9e3aa22854~mv2.gif",
   buttons: [
-    { text: "Desbloquear ahora", action: "continuar" },
-    { text: "Acceso exclusivo", action: "continuar" }
+    { text: "Desbloquear Ahora", action: "continuar" },
+    { text: "Salir de la Escasez", action: "continuar" }
   ]
 },
 {
