dejar de ser pobre

--- a/oraculo-es1/index.html
+++ b/oraculo-es1/index.html
@@ -665,7 +665,7 @@ title: (() => {
   gif: "https://static.wixstatic.com/media/7f5efc_e4cececd9a3d4752ac73ed9e3aa22854~mv2.gif",
     buttons: [
     { text: "¡ASEGURAR AHORA!", action: "link", link: "/lp-2-es/" },
-    { text: "Me comprometo.", action: "link", link: "/lp-2-es/" }
+    { text: "Dejar de ser pobre", action: "link", link: "/lp-2-es/" }
   ]
 }
 
