--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -17,6 +17,7 @@
 <meta property="og:image" content="https://i.imgur.com/iPllVtt.jpeg" />
 <meta property="og:type" content="website" />
 
+
 <!-- Para WhatsApp y Twitter -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="El Código de la [P]ersuasión" />
@@ -43,7 +44,7 @@
       transition: top 0.4s ease-in-out;
     }
     body { margin-top: 60px; }
-    .aviso-topo.hide { top: -60px; }
+   
 
     /* Botão pulsante com brilho */
     .btn-pulsante {
@@ -97,18 +98,7 @@
   atualizarCountdown();
   const timer = setInterval(atualizarCountdown, 1000);
 
-  // Esconder tarja ao rolar
-  let ultimoScroll = 0;
-  const aviso = document.getElementById("aviso-topo");
-  window.addEventListener("scroll", () => {
-    const atualScroll = window.scrollY;
-    if (atualScroll > ultimoScroll) {
-      aviso.classList.add("hide");
-    } else {
-      aviso.classList.remove("hide");
-    }
-    ultimoScroll = atualScroll;
-  });
+
 </script>
 
 
@@ -178,14 +168,24 @@
   video.addEventListener("timeupdate", atualizarBarra);
 
   // Só dá play com som no clique — sem rolagem
+  let jaTocou = false;
+
   document.addEventListener("click", e => {
     if (e.target.closest("a")) return; // ignora cliques em links
-    if (video && video.paused) {
+    if (video && video.paused && !jaTocou) {
       video.muted = false;
       video.volume = 1.0;
       video.play().catch(err => console.log("Autoplay bloqueado:", err));
+      jaTocou = true; // impede novo play depois que o vídeo começou
     }
   });
+
+  // Se o vídeo terminar, impede novo play
+  video.addEventListener("ended", () => {
+    jaTocou = true;
+    video.pause();
+  });
+
 </script>
 
 
@@ -307,15 +307,24 @@
   </div>
 </div>
 
-
-
 <br><br><br>
 
+<!-- GIF + título -->
+<section class="text-center pt-2 pb-0 bg-black">
+  <h2 class="text-3xl lg:text-4xl font-bold mb-1 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
+    Área de miembros secreta
+  </h2>
 
+  <div class="flex justify-center mt-1">
+    <img src="https://i.imgur.com/o934mNr.gif" 
+         alt="Área secreta" 
+         class="w-72 sm:w-96 h-auto">
+  </div>
+</section>
 
 
 <!-- SEÇÃO 3 -->
-<section class="relative px-6 py-32 bg-black text-center overflow-hidden">
+<section class="relative px-6 py-16 bg-black text-center overflow-hidden">
   <h2 class="text-3xl lg:text-4xl font-bold mb-16 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent relative z-20">
     ¿Qué vas a aprender dentro del Código de la <span class="text-red-600">[P]ersuación</span>?
   </h2>
@@ -482,12 +491,12 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 <!-- Preço -->
 <div class="text-center mb-4">
   <p class="text-base mb-2 text-gray-200">
-    De <s class="text-red-500">$ 59,70</s> por
+    De <s class="text-red-500">$ 59.70</s> por
   </p>
 
   <div class="flex items-center justify-center gap-2 leading-none">
     <span class="text-7xl sm:text-7xl font-extrabold text-green-400 drop-shadow-[0_0_20px_rgba(34,197,94,0.9)]">
-      $ 9,70
+      $ 9.70
     </span>
   </div>
 
@@ -511,12 +520,8 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
        class="w-56 h-auto opacity-95">
 </div>
 
-
-
   </div>
 </div>
-
-
 
 
 
@@ -525,13 +530,18 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 <br><br><br><br>
 
 <!-- SEÇÃO DEPOIMENTOS -->
-<section class="px-6 py-20 bg-black text-center relative overflow-hidden">
-  <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
+<section class="px-6 py-16 bg-black text-center relative overflow-hidden">
+  <h2 class="text-3xl lg:text-4xl font-bold mb-1 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
     Mentes que ya dominan la [P]ersuasión
   </h2>
 
+  <!-- Estrelas -->
+  <p class="text-center text-yellow-400 text-sm font-light mt-1 mb-4">
+    ★★★★★ + de 5.000 miembros
+  </p>
+
   <!-- Contenedor con scroll y drag -->
-  <div id="infiniteSlider" class="relative w-full overflow-x-auto select-none hide-scrollbar cursor-grab">
+  <div id="infiniteSlider" class="relative w-full overflow-x-auto select-none hide-scrollbar cursor-grab mt-0">
     <div id="sliderContent" class="flex gap-6 py-2">
       <!-- ====== COPIA BASE (8 tarjetas) ====== -->
 
@@ -796,6 +806,27 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
 
 
+
+<!-- SEÇÃO MENTOR -->
+<section class="px-6 py-16 bg-black text-center">
+  <div class="flex justify-center mb-4">
+    <img src="https://i.imgur.com/a7Ctcaa.png" 
+         alt="Mentor Matt Muric"
+         class="w-72 sm:w-96 h-auto rounded-lg opacity-80">
+  </div>
+
+  <h2 class="text-3xl lg:text-4xl font-bold mb-0 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
+    Conoce a tu mentor
+  </h2>
+
+  <p class="text-gray-300 max-w-2xl mx-auto text-base leading-relaxed mt-4">
+    Soy <b>Matt Muric</b>, conocido como <b>MatMur</b>, especialista en ventas de alto rendimiento.  
+    <br><br>Generé más de <b>3 millones en ventas en 2024</b> y hoy enseño a las personas a comunicarse con poder, 
+    influir con autenticidad y lograr <b>resultados reales</b> usando técnicas persuasivas.
+  </p>
+</section>
+
+
 <br>
 
 
@@ -820,8 +851,9 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   <h2 class="text-3xl lg:text-5xl font-bold mb-6"><b>⚠️ ¿Ansioso...?</b> ¿Ya bajaste hasta el final sin leer?</h2>
   <p class="text-gray-300 mb-8">Te lo resumo... Este material es una guía completa de <b>PNL y Disparadores Mentales</b> para influir en las personas, persuadir y conquistar respeto, ventas y autoridad. 
 <br>
- <p class="text-gray-300 mb-8"><b>¡CUIDADO!</b> ¡No uses estas técnicas para el mal! 
-  </p>
+
+ <p class="text-gray-300 mb-8"><b>¡CUIDADO!</b> ¡No uses estas técnicas para el mal! </p>
+
  <!-- Botão CTA -->
 <a href="https://pay.hotmart.com/C102252201D?checkoutMode=10"
    class="mx-auto w-[90%] max-w-sm sm:max-w-md bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg text-lg transition-all btn-pulsante text-center shadow-lg leading-tight block">
@@ -831,12 +863,38 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   </span>
 </a>
 
-<!-- Estrelas -->
-<p class="text-center text-yellow-400 text-sm font-light mt-3">
-  ★★★★★ + de 5.000 miembros
-</p>
 
-<br>
+<br><br>
+
+<!-- CARD DE ALERTA  -->
+<p class="text-gray-300 mb-1">203 personas están viendo esta oferta</p>
+<div class="flex justify-center mb-2">
+  <div class="relative flex items-center gap-2 bg-[#d40000] text-white text-sm font-semibold px-4 py-1.5 rounded shadow-[0_0_8px_rgba(255,0,0,0.4)] overflow-hidden">
+    <!-- Brilho branco discreto no canto direito -->
+    <div class="absolute right-0 top-0 w-1/3 h-full bg-gradient-to-l from-white/10 to-transparent"></div>
+
+    <!-- Bolinha animada -->
+    <span class="relative flex items-center justify-center w-1.5 h-1.5 z-10">
+      <span class="absolute inline-block w-1.5 h-1.5 bg-white rounded-full animate-pulseDot"></span>
+    </span>
+
+    <span class="z-10">¡Últimos <b>2 Cupos</b> en Oferta!</span>
+  </div>
+</div>
+
+<style>
+@keyframes pulseDot {
+  0% { transform: scale(1); opacity: 1; }
+  50% { transform: scale(1.8); opacity: 0.6; }
+  100% { transform: scale(1); opacity: 1; }
+}
+
+.animate-pulseDot {
+  animation: pulseDot 1.3s infinite ease-in-out;
+}
+</style>
+
+
 <br>
 </section>
 
@@ -854,7 +912,12 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   <img src="https://i.imgur.com/qTtFLJe.png" 
        alt="Logo El Código de la Persuasión" 
        class="mx-auto w-14 h-auto mb-1 opacity-70">
-  <p><strong>El Código de la [P]ersuación</strong> - Todos los derechos reservados.</p>
+<p class="leading-tight mb-1">
+  <strong>2025 - El Código de la [P]ersuación</strong> - Todos los derechos reservados.
+</p>
+<p class="leading-tight text-gray-400 text-[11px]">
+  Este producto es digital. No se envía ningún producto físico.
+</p>
 </div>
 
 
