--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -484,6 +484,10 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
     <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>
     <span>Acceso <strong>Vitalicio</strong> al Área de Miembros 🎁</span>
   </li>
+  <li class="flex items-center gap-2">
+    <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>
+    <span>Recibe <strong>30 días</strong> de garantía absoluta.</span>
+  </li>
 </ul>
 
   
@@ -522,7 +526,6 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
   </div>
 </div>
-
 
 
 
@@ -806,25 +809,30 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
 
 
-
 <!-- SEÇÃO MENTOR -->
-<section class="px-6 py-16 bg-black text-center">
-  <div class="flex justify-center mb-4">
-    <img src="https://i.imgur.com/a7Ctcaa.png" 
-         alt="Mentor Matt Muric"
-         class="w-72 sm:w-96 h-auto rounded-lg opacity-80">
+<section class="px-6 py-16 bg-black">
+  <div class="max-w-2xl mx-auto">
+    <div class="flex justify-center mb-4">
+      <img src="https://i.imgur.com/a7Ctcaa.png" 
+           alt="Mentor Matt Muric"
+           class="w-72 sm:w-96 h-auto rounded-lg opacity-80">
+    </div>
+
+  <h2 class="text-3xl lg:text-4xl font-bold mb-0 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent text-left">
+      Conoce a tu mentor
+    </h2>
+
+  <p class="text-gray-300 text-base leading-relaxed text-left mt-4">
+      Soy <b>Matt Muric</b>, conocido como <b>MatMur</b>, especialista en ventas de alto rendimiento. </p> 
+
+ <p class="text-gray-300 text-base leading-relaxed text-left mt-4">
+      Generé más de <b><span class="underline decoration-red-600 decoration-1 underline-offset-2">3.5 millones en ventas en 2024</span></b> 
+      y hoy enseño a las personas a comunicarse con poder, 
+      influir con autenticidad y lograr <b>resultados reales</b> usando técnicas persuasivas.
+    </p>
   </div>
-
-  <h2 class="text-3xl lg:text-4xl font-bold mb-0 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
-    Conoce a tu mentor
-  </h2>
-
-  <p class="text-gray-300 max-w-2xl mx-auto text-base leading-relaxed mt-4">
-    Soy <b>Matt Muric</b>, conocido como <b>MatMur</b>, especialista en ventas de alto rendimiento.  
-    <br><br>Generé más de <b>3 millones en ventas en 2024</b> y hoy enseño a las personas a comunicarse con poder, 
-    influir con autenticidad y lograr <b>resultados reales</b> usando técnicas persuasivas.
-  </p>
 </section>
+
 
 
 <br>
@@ -862,6 +870,12 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
     Aprovecha $50 de descuento
   </span>
 </a>
+<!-- Rodapé com imagem colada no botão -->
+<div class="flex justify-center mt-4">
+  <img src="https://i.imgur.com/Tos7DF9.png" 
+       class="w-56 h-auto opacity-95">
+</div>
+
 
 
 <br><br>
@@ -915,7 +929,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 <p class="leading-tight mb-1">
   <strong>2025 - El Código de la [P]ersuación</strong> - Todos los derechos reservados.
 </p>
-<p class="leading-tight text-gray-400 text-[11px]">
+<p class="leading-tight mb-1">
   Este producto es digital. No se envía ningún producto físico.
 </p>
 </div>
