--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -126,6 +126,47 @@
       <source src="https://video.wixstatic.com/video/7f5efc_eb57ec3bebee4ccda89a0e68f70e82a1/1080p/mp4/file.mp4" type="video/mp4">
     </video>
 
+
+    <!-- IMAGEM SOBRE O VÍDEO -->
+<div id="overlaySymbol" class="absolute inset-0 flex items-center justify-center z-30 pointer-events-none transition-opacity duration-700">
+  <img src="https://i.imgur.com/TLMOMJO.png" 
+       class="w-40 sm:w-56 md:w-64 lg:w-72 h-auto opacity-90 animate-zoomPulse select-none">
+</div>
+
+<!-- ANIMAÇÃO -->
+<style>
+@keyframes zoomPulse {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.08);
+  }
+}
+.animate-zoomPulse {
+  animation: zoomPulse 4s ease-in-out infinite;
+}
+</style>
+
+<script>
+  const video = document.getElementById("heroVideo");
+  const overlaySymbol = document.getElementById("overlaySymbol");
+
+  document.addEventListener("click", (e) => {
+    if (e.target.closest("a")) return;
+    if (video && video.paused) {
+      video.muted = false;
+      video.volume = 1.0;
+      video.play().then(() => {
+        overlaySymbol.style.opacity = "0"; // desaparece suavemente
+        setTimeout(() => overlaySymbol.style.display = "none", 800); // remove após fade
+      }).catch(err => console.log("Autoplay bloqueado:", err));
+    }
+  });
+</script>
+
+
+
     <!-- Barra de progresso -->
   <div class="absolute bottom-0 left-0 w-full h-[12px] bg-transparent rounded-b-xl overflow-hidden">
     <div id="progressBar" class="h-full w-0 bg-red-600/80 shadow-[0_0_12px_rgba(255,0,0,0.6)] transition-all duration-200"></div>
