--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -129,8 +129,8 @@
 
     <!-- IMAGEM SOBRE O VÍDEO -->
 <div id="overlaySymbol" class="absolute inset-0 flex items-center justify-center z-30 pointer-events-none transition-opacity duration-700">
-  <img src="https://i.imgur.com/TLMOMJO.png" 
-       class="w-40 sm:w-56 md:w-64 lg:w-72 h-auto opacity-90 animate-zoomPulse select-none">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Youtube_logo.png" 
+       class="w-20 sm:w-56 md:w-64 lg:w-72 h-auto opacity-100 animate-zoomPulse select-none">
 </div>
 
 <!-- ANIMAÇÃO -->
