--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -245,7 +245,7 @@
     </div>
 
   </div>
-</section><br><br><br><br><br>
+</section><br><br><br><br><br><br>
 
 
 
@@ -348,7 +348,9 @@
   </div>
 </div>
 
-<br><br><br>
+<br><br><br><br><br><br>
+
+
 
 <!-- GIF + título -->
 <section class="text-center pt-2 pb-0 bg-black">
@@ -362,6 +364,11 @@
          class="w-72 sm:w-96 h-auto">
   </div>
 </section>
+
+
+
+<br><br><br><br>
+
 
 
 <!-- SEÇÃO 3 -->
