--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -122,7 +122,7 @@
       class="w-full rounded-xl shadow-2xl object-cover"
       preload="auto"
       playsinline
-      poster="https://i.imgur.com/BTxzeTn.gif">
+      poster="https://i.imgur.com/JrfTAZg.gif">
       <source src="https://video.wixstatic.com/video/7f5efc_eb57ec3bebee4ccda89a0e68f70e82a1/1080p/mp4/file.mp4" type="video/mp4">
     </video>
 
