--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -570,7 +570,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
 
 <!-- TÍTULO DAS OFERTAS -->
-<h2 id="preco" class="text-3xl lg:text-4xl font-bold mb-10 lg:mb-12 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent text-center">
+<h2 class="text-3xl lg:text-4xl font-bold mb-10 lg:mb-12 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent text-center">
   Elige la mejor oferta
 </h2>
 
@@ -635,7 +635,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
 
 <!-- CARD DE PREÇO COMPLETO -->
-<div class="relative bg-[#0a0a0a]/90 backdrop-blur-xl border border-white/10 rounded-2xl p-8 max-w-sm sm:max-w-md mx-auto text-black mt-14 sm:mt-16 mb-12 shadow-[0_0_25px_rgba(255,255,255,0.05)]">
+<div id="preco" class="relative bg-[#0a0a0a]/90 backdrop-blur-xl border border-white/10 rounded-2xl p-8 max-w-sm sm:max-w-md mx-auto text-black mt-14 sm:mt-16 mb-12 shadow-[0_0_25px_rgba(255,255,255,0.05)]">
   <!-- Reflexos de vidro -->
   <div class="absolute inset-0 pointer-events-none rounded-2xl">
     <div class="absolute top-0 left-0 w-1/2 h-1/3 bg-gradient-to-br from-white/40 to-transparent opacity-20 blur-2xl"></div>
