--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -604,7 +604,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   <!-- Conteúdo -->
   <div class="relative z-10 -mt-6">
     <!-- Título -->
-    <h3 class="text-xl font-extrabold text-white text-center mb-6 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
+    <h3 class="text-2xl font-extrabold text-white mb-6 text-center relative z-10 mt-10">
       PLAN BÁSICO
     </h3>
 
