--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -359,10 +359,12 @@
     Área de miembros secreta
   </h2>
 
-  <div class="flex justify-center mt-1">
-    <img src="https://i.imgur.com/xYRaJUr.gif" 
-      class="w-72 sm:w-96 h-auto">
-  </div>
+<div class="flex justify-center mt-1 relative overflow-hidden rounded-xl">
+  <video autoplay loop muted playsinline 
+    class="w-72 sm:w-96 h-auto object-cover rounded-xl shadow-lg">
+    <source src="https://video.wixstatic.com/video/7f5efc_0e8a173ccdfd4f928f2d5c123415d129/480p/mp4/file.mp4" type="video/mp4">
+  </video>
+</div>
 </section>
 
 
