--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -57,6 +57,23 @@
       50%  { transform: scale(1.08); box-shadow: 0 0 20px rgba(34,197,94,1), 0 0 40px rgba(34,197,94,0.7); }
       100% { transform: scale(1);   box-shadow: 0 0 10px rgba(34,197,94,0.7), 0 0 20px rgba(34,197,94,0.5); }
     }
+
+
+    /* Brilho sutil e elegante ao redor do vídeo */
+.video-glow {
+  position: relative;
+  box-shadow: 0 0 25px rgba(255, 255, 255, 0.12),
+              0 0 50px rgba(255, 0, 0, 0.08),
+              0 0 70px rgba(255, 255, 255, 0.06);
+  transition: box-shadow 0.6s ease-in-out;
+}
+
+.video-glow:hover {
+  box-shadow: 0 0 35px rgba(255, 255, 255, 0.18),
+              0 0 60px rgba(255, 0, 0, 0.12),
+              0 0 90px rgba(255, 255, 255, 0.1);
+}
+
   </style>
 
 
