--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -158,29 +158,26 @@
     </span>
   </h1>
 
-  <!-- VIDEO HERO --> 
-<div class="relative flex justify-center w-full max-w-lg z-10">
-  <div class="video-glow rounded-xl overflow-hidden">
-    <video id="heroVideo"
-      class="w-full rounded-xl object-cover"
-      preload="auto"
-      playsinline
-      poster="https://i.imgur.com/JrfTAZg.gif">
-      <source src="https://video.wixstatic.com/video/7f5efc_eb57ec3bebee4ccda89a0e68f70e82a1/1080p/mp4/file.mp4" type="video/mp4">
-    </video>
-  </div>
-  
-  <!-- IMAGEM SOBRE O VÍDEO --> 
-   
-  <div id="overlaySymbol" 
-  class="absolute inset-0 flex items-center justify-center z-30 pointer-events-none transition-opacity duration-700"> 
-  <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Youtube_logo.png" 
-  class="w-20 sm:w-56 md:w-64 lg:w-72 h-auto opacity-100 animate-zoomPulse select-none"> 
-</div>
+<!-- VIDEO HERO --> 
+ <div class="relative flex justify-center w-full max-w-lg z-10"> 
+  <div class="video-glow rounded-xl overflow-hidden"> 
+    <video id="heroVideo" 
+    class="w-full rounded-xl object-cover" 
+    preload="auto" 
+    playsinline poster="https://i.imgur.com/JrfTAZg.gif"> 
+    
+    <source src="https://video.wixstatic.com/video/7f5efc_eb57ec3bebee4ccda89a0e68f70e82a1/1080p/mp4/file.mp4" 
+    type="video/mp4"> </video> 
+  </div> 
+    
+    <!-- IMAGEM SOBRE O VÍDEO --> 
+     <div id="overlaySymbol" 
+     class="absolute inset-0 flex items-center justify-center z-30 pointer-events-none transition-opacity duration-700"> 
+     <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Youtube_logo.png" 
+     class="w-20 sm:w-56 md:w-64 lg:w-72 h-auto opacity-100 animate-zoomPulse select-none"> 
+    </div>
 
  
-
-
 
 
 <!-- ANIMAÇÃO -->
@@ -276,8 +273,6 @@
 
   video.addEventListener("timeupdate", atualizarBarra);
 
-  // Só dá play com som no clique — sem rolagem
-  let jaTocou = false;
 
   document.addEventListener("click", e => {
     if (e.target.closest("a")) return; // ignora cliques em links
