--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -419,14 +419,37 @@
     Área de miembros secreta
   </h2>
 
+<!-- VÍDEO DA ÁREA DE MIEMBROS -->
 <div class="flex justify-center mt-1 relative overflow-hidden rounded-xl">
-  <video autoplay loop muted playsinline 
+  <video 
+    id="videoAreaMiembros"
+    autoplay
+    loop
+    muted
+    playsinline
+    preload="auto"
     class="w-72 sm:w-96 h-auto object-cover rounded-xl shadow-lg">
     <source src="https://video.wixstatic.com/video/7f5efc_0e8a173ccdfd4f928f2d5c123415d129/480p/mp4/file.mp4" type="video/mp4">
   </video>
 </div>
 </section>
 
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  const v = document.getElementById("videoAreaMiembros");
+  const tryPlay = () => {
+    const playPromise = v.play();
+    if (playPromise !== undefined) {
+      playPromise.catch(() => {
+        // iOS às vezes bloqueia até o muted autoplay
+        v.muted = true;
+        v.play();
+      });
+    }
+  };
+  tryPlay();
+});
+</script>
 
 
 <br><br><br><br>
