--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -575,7 +575,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 <section class="px-3 py-20 bg-black text-center">
 
   <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent text-center max-w-6xl mx-auto">
-    Por comprar HOY te regalamos 3 Bonos Exclusivos
+    Por comprar HOY te regalamos 4 Bonos Exclusivos
   </h2>
 
   <div class="flex flex-col gap-10 lg:gap-12 items-center">
@@ -647,6 +647,29 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
       </p>
     </div>
 
+    <!-- BONO 4 -->
+    <div class="relative w-full max-w-5xl bg-[#050505] border border-white/5 rounded-xl p-8 pl-6 shadow-[0_0_25px_rgba(255,255,255,0.03)] hover:shadow-[0_0_40px_rgba(255,255,255,0.06)] text-left overflow-hidden">
+      
+      <div class="absolute bottom-0 left-0 w-full h-20 bg-gradient-to-t from-white/5 to-transparent pointer-events-none rounded-b-xl"></div>
+
+      <div class="flex justify-center mb-4 relative z-10">
+        <img src="https://i.imgur.com/hgx1p18.png" class="w-full max-w-2xl h-auto rounded-lg" alt="Bono 4">
+      </div>
+
+      <div class="inline-flex items-center bg-[#b71e1e] text-white text-[10px] font-semibold px-2 py-[1px] rounded-sm shadow-[0_0_4px_rgba(255,0,0,0.25)] mb-1 relative z-10">
+        ✓ BONO #4
+      </div>
+
+      <h3 class="text-xl font-bold text-white mb-3 relative z-10">Comunidad secreta en WhatsApp</h3>
+
+      <p class="relative z-10 leading-snug">
+        <span class="text-gray-400 text-base">Valorado en:</span>
+        <span class="text-gray-400 line-through ml-1 text-base">USD 49.90</span><br>
+        <span class="text-green-500 font-bold text-lg">HOY GRATIS</span>
+      </p>
+    </div>
+
+
     <!-- CARD FINAL DE REGALOS -->
 <div class="relative w-full max-w-5xl bg-[#050505] border border-white/5 rounded-xl p-8 pl-4 shadow-[0_0_25px_rgba(255,255,255,0.03)] hover:shadow-[0_0_40px_rgba(255,255,255,0.06)] text-center overflow-hidden">
 
@@ -665,7 +688,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
 <div class="flex justify-center items-baseline gap-2 mb-2">
   <p class="text-gray-300 text-base">Valor total de los bonos:</p>
-  <p class="text-red-500 text-xl line-through">$ 228.60</p>
+  <p class="text-red-500 text-xl line-through">$ 278.60</p>
 </div>
 <p class="text-gray-300 text-base mb-1">Solo por HOY:</p>
 <p class="text-green-500 text-3xl font-extrabold">GRATIS</p>
