--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -813,6 +813,10 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
     <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>
     <span><strong><span class="text-red-500">BONO #3:</span></strong> Contenido exclusivo de grandes mentorías</span>
   </li>
+    <li class="flex items-center gap-2">
+    <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>
+    <span><strong><span class="text-red-500">BONO #4:</span></strong> Comunidad secreta en WhatsApp</span>
+  </li>
   <li class="flex items-center gap-2">
     <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>
     <span>Acceso <strong>Vitalicio</strong> al Área de Miembros 🎁</span>
