--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -749,9 +749,10 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
     <!-- Preço -->
     <div class="text-center mb-4">
       <div class="flex items-center justify-center gap-2 leading-none">
-        <span class="text-5xl sm:text-7xl font-extrabold text-green-400 drop-shadow-[0_0_20px_rgba(34,197,94,0.9)]">
-            $ 9.70
-        </span>
+  <span class="text-2xl sm:text-3xl font-bold text-green-400 drop-shadow-[0_0_14px_rgba(34,197,94,0.7)] mt-1">USD</span>
+  <span class="text-5xl sm:text-7xl font-extrabold text-green-400 drop-shadow-[0_0_20px_rgba(34,197,94,0.9)]">
+    9.70
+  </span>
       </div>
       <div class="mt-1 text-gray-200 text-base">A la vista</div>
     </div>
@@ -832,14 +833,17 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 <!-- Preço -->
 <div class="text-center mb-4">
   <p class="text-base mb-2 text-gray-200">
-    De <s class="text-red-500">$ 61.70</s> por
+    De <s class="text-red-500">USD 61.70</s> por
   </p>
 
-  <div class="flex items-center justify-center gap-2 leading-none">
-    <span class="text-6xl sm:text-7xl font-extrabold text-green-400 drop-shadow-[0_0_20px_rgba(34,197,94,0.9)]">
-      $ 11.70
-    </span>
-  </div>
+<div class="flex items-center justify-center gap-1 leading-none">
+  <span class="text-2xl sm:text-3xl font-bold text-green-400 drop-shadow-[0_0_14px_rgba(34,197,94,0.7)] mt-1">
+    USD
+  </span>
+  <span class="text-6xl sm:text-7xl font-extrabold text-green-400 drop-shadow-[0_0_20px_rgba(34,197,94,0.9)]">
+    11.70
+  </span>
+</div>
 
   <div class="mt-1 text-gray-200 text-base">*Solo por hoy $50 OFF</div>
 </div><br>
