--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -688,7 +688,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
 <div class="flex justify-center items-baseline gap-2 mb-2">
   <p class="text-gray-300 text-base">Valor total de los bonos:</p>
-  <p class="text-red-500 text-xl line-through">$ 278.60</p>
+  <p class="text-red-500 text-xl line-through">USD 278.60</p>
 </div>
 <p class="text-gray-300 text-base mb-1">Solo por HOY:</p>
 <p class="text-green-500 text-3xl font-extrabold">GRATIS</p>
