--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -1167,8 +1167,8 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
       Soy <b>Matt Muric</b>, conocido como <b>MatMur</b>, especialista en ventas de alto rendimiento. </p> 
 
  <p class="text-gray-300 text-base leading-relaxed text-left mt-4">
-      Generé más de <b><span class="underline decoration-red-600 decoration-1 underline-offset-2">3.5 millones en ventas en 2024</span></b> 
-      y hoy enseño a las personas a comunicarse con poder, 
+      Generé más de <b><span class="underline decoration-red-600 decoration-1 underline-offset-2">3.5 millones de dólares</span></b> 
+      en ventas en 2024 y hoy enseño a las personas a comunicarse con poder, 
       influir con autenticidad y lograr <b>resultados reales</b> usando técnicas persuasivas.
     </p>
   </div>
